# OOP

./: CMakeLists.txt  Controller.h  Movie.h  Repository.cpp  UI.cpp  main.cpp
Bacteria_App/: Bacteria.h  Repository.cpp  UI.cpp  UI.h
Movie_App/: Repository.h  UI.h  main.cpp  requirement.txt
Movie_app/: CMakeLists.txt  Controller.cpp  Controller.h  Errors.cpp  Errors.h  GUI.cpp  GUI.h  Movie.cpp  Movie.h  Repository.cpp  Repository.h  RepositoryCSV.cpp  RepositoryCSV.h  RepositoryHTML.cpp  RepositoryHTML.h  UI.cpp  UI.h  UndoAction.cpp  UndoAction.h  Validate.cpp  Validate.h  file.txt  main.cpp
Movie_assigment5-6/: Bacteria.cpp  CMakeLists.txt  Controller.cpp  Controller.h  Movie.cpp  Repository.h  main.cpp
assigment3-4/: CMakeLists.txt  Controller.c  Controller.h  Country.c  Country.h  OperationStack.c  OperationStack.h  Repository.c  Repository.h  a.out  main.c  strtok.c
backup3-4/: Country.c  Country.h  DynamicArray.c  DynamicArray.h  a.out  main.c
iuliana_materials/Lecture2_demo/Lecture2_demo/: DynamicArray.c  DynamicMemoryManagementC.c  Lecture2_demo.vcxproj  NullDanglingPointers.c  main.c
iuliana_materials/Seminar1_914/: Seminar1_914.sln
iuliana_materials/Seminar1_914/Seminar1_914/: Planet.c  Planet.h  Seminar1_914.vcxproj  Seminar1_914.vcxproj.filters  dynamicVector.c  dynamicVector.h  main.c
iuliana_materials/Seminar1_915/: Project1.sln
iuliana_materials/Seminar1_915/Project1/: Project1.vcxproj  Project1.vcxproj.filters  SimplePrograms.c  Vector.c
iuliana_materials/Seminar1_916/Project2/: Project2.sln
(+9 files in other folders)
